cluster/coder-ingress-route/coder-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-coder
  namespace: code-server
spec:
  stripPrefix:
    prefixes:
      - "/coder"
    forceSlash: true

---
# Host(`test.traefik.local`) && PathPrefix(`/coder`)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-ingress
  namespace: code-server
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/coder`)
      kind: Rule
      middlewares:
        - name: strip-coder
          namespace: code-server
      services:
        - name: code-server
          port: 8080
