cluster/coder-ingress-route/coder-secure-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-coder
  namespace: code-server
spec:
  stripPrefix:
    prefixes:
      - "/coder"
    forceSlash: true

---
# Host(`coder.traefik.local`) && PathPrefix(`/coder`) PathPrefix(`/coder`)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-ingress
  namespace: code-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.traefik.local`)
      kind: Rule
      # middlewares:
      #   - name: strip-coder
      #     namespace: code-server
      services:
        - name: code-server
          port: 8080
          namespace: code-server
          serversTransport: insecure-transport
  tls:
    secretName: coder.taefik.local
